--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home_top_app_bar_title">ホーム</string>
     <string name="home_text_field_placeholder">リポジトリ名を入力してください</string>
     <string name="home_button_search">検索</string>
+    <string name="home_empty_query_notification_message">リポジトリ名を入力してください</string>
 </resources>
